# intellectual-dna

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LAUNCH-POSTS.md  Makefile  README.md  architecture.html  brain.yaml.example  config.py  embed.sh  glama.json  ingest.sh  pyproject.toml  requirements.txt  setup.sh  start.sh
.claude/: CLAUDE.md
.claude/skills/alignment-check/: SKILL.md
.claude/skills/brain-stats/: SKILL.md
.claude/skills/cognitive-patterns/: SKILL.md
.claude/skills/context-recovery/: SKILL.md
.claude/skills/conversations-by-date/: SKILL.md
.claude/skills/dormant-contexts/: SKILL.md
.claude/skills/get-conversation/: SKILL.md
.claude/skills/get-principle/: SKILL.md
.claude/skills/github-search/: SKILL.md
.claude/skills/list-principles/: SKILL.md
.claude/skills/open-threads/: SKILL.md
.claude/skills/query-analytics/: SKILL.md
.claude/skills/search-conversations/: SKILL.md
.claude/skills/search-docs/: SKILL.md
.claude/skills/search-summaries/: SKILL.md
.claude/skills/semantic-search/: SKILL.md
.claude/skills/switching-cost/: SKILL.md
.claude/skills/thinking-trajectory/: SKILL.md
.claude/skills/trust-dashboard/: SKILL.md
.claude/skills/tunnel-history/: SKILL.md
.claude/skills/tunnel-state/: SKILL.md
.claude/skills/unfinished-threads/: SKILL.md
.claude/skills/unified-search/: SKILL.md
.claude/skills/what-do-i-think/: SKILL.md
.claude/skills/what-was-i-thinking/: SKILL.md
.github/workflows/: test.yml
brain_mcp/: __init__.py  cli.py  config.py  platform.py  server_v1.py  sync.py  telemetry.py
brain_mcp/_prompts/: enhanced-extraction-v5.txt
brain_mcp/dashboard/: __init__.py  app.py
brain_mcp/dashboard/routes/: onboarding.py  pages.py  search.py  settings.py  sources.py  stats.py  tools.py
brain_mcp/dashboard/static/: brain.css  brain.js
brain_mcp/dashboard/templates/: base.html  home.html  onboarding.html  search.html  settings.html  sources.html  tools.html
brain_mcp/dashboard/templates/partials/: mcp_config_snippet.html  search_results.html  stats_cards.html
brain_mcp/embed/: __init__.py  embed.py  provider.py
brain_mcp/ingest/: __init__.py  chatgpt.py  claude_code.py  clawdbot.py  cursor.py  generic.py  noise_filter.py  schema.py
brain_mcp/server/: __init__.py  __main__.py  db.py  server.py  tools_analytics.py  tools_conversations.py  tools_github.py  tools_prosthetic.py  tools_search.py  tools_stats.py  tools_synthesis.py
brain_mcp/summarize/: __init__.py  summarize.py
docs/: adding-sources.md  getting-started.md  tools-reference.md
docs/adr/: 001-shelet-reference-implementation.md  002-supabase-canonical-backend.md
live/: daily_briefing.py  install-daily-briefing.sh  install-sync.sh  sync.py
mordelab/: README.md
mordelab/02-monotropic-prosthetic/: BUILD_LOG_2026-02-13.md  MCP_V2_SPEC.md  PROACTIVE_INJECTION_SPEC.md  README.md  SEED-MORDETROPIC-128KB-MASTER.json  mcp_brain_server.py
npm/: package.json
pipelines/: __init__.py  __main__.py  build_behavioral_analysis.py  build_brain_layers.py  build_code_productivity.py  build_collaboration_patterns.py  build_conversation_analysis.py  build_conversation_titles.py  build_cross_dimensional.py  build_cross_domain.py  build_daily_accomplishments.py  build_decision_patterns.py  build_discovery.py  build_doc_analytics.py  build_doc_classification.py  build_facts_spend.py  build_focus_v1.py  build_focus_v2.py  build_insight_mining.py  build_intellectual_evolution.py  build_intellectual_evolution_v2.py  build_learning_trajectories.py  build_markdown_analysis.py  build_monthly_themes.py  build_monthly_themes_v2.py  build_mood_patterns.py  build_mvp_velocity.py  build_mvp_velocity_v2.py  build_personal_glossary.py  build_phase8_v2.py  build_phrase_context.py  build_phrases_v1.py  build_problem_resolution_chain.py  build_problem_resolution_v2.py  build_problem_resolutions.py  build_project_arcs.py  build_question_extraction.py  build_questions_v2.py  build_signature_phrases.py  build_signature_phrases_v2.py  (+40 more)
principles/: template.yaml
scripts/: verify_skills.py
supabase/migrations/: 001_telemetry.sql  003_shelet_l0_to_l3.sql
tests/: __init__.py  conftest.py  test_basic.py  test_dashboard_day4.py  test_dashboard_v2.py
tests/fixtures/: brain.yaml  sample_chatgpt.json  sample_claude_code.jsonl  sample_clawdbot.jsonl  sample_generic.jsonl
