[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-mcp"
version = "1.0.0b1"
description = "Transportable AI memory — MCP server for the Bob protocol. Local-only, no cloud, no embeddings."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Mordechai Potash"}]
keywords = ["mcp", "ai-memory", "bob", "duckdb", "local-first", "claude", "chatgpt", "cursor", "codex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0",
    "duckdb>=1.0",
]

# v1.0 drops the heavy v0.x deps (lancedb, pandas, pyarrow, fastembed, anthropic,
# fastapi, jinja2, etc.) in favor of a thin server that reads Bob protocol
# parquets via duckdb. The legacy entry points + cli stay in the wheel for
# v0.x-compatible imports but are no longer the install default.
[project.optional-dependencies]
legacy = ["lancedb>=0.20", "pandas>=2.0", "pyarrow>=15.0", "pyyaml", "rich>=13.0", "pytz", "tomli-w>=1.0"]
dev = ["pytest>=7.0", "build", "twine"]

[project.scripts]
brain-mcp = "brain_mcp.server_v1:main"

[project.urls]
Homepage = "https://github.com/mordechaipotash/brain-mcp"
Documentation = "https://brainmcp.dev"
Repository = "https://github.com/mordechaipotash/brain-mcp"

[tool.setuptools.packages.find]
include = ["brain_mcp*"]

[tool.setuptools.package-data]
"brain_mcp.dashboard" = ["templates/**/*.html", "static/**/*"]
"brain_mcp" = ["_prompts/*.txt"]
